Add albums list

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
     <require from="./views/artists-list/artists-list"></require>
 
     <div class="container">
-          <search-box></search-box>
-          <artists-list></artists-list>
+        <div class="row">
+          <router-view class="col-md-8"></router-view>
+      </div>
     </div>
 </template>
